// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Admin/Register/Form/Field Grid Default Items 1`] = `
<div
  style="border: 1px solid lightgrey; padding: 1rem; margin: 3rem auto; max-width: 600px;"
>
  <div
    class="makeStyles-root-1 makeStyles-root-2"
  >
    <div
      style="grid-column-end: span undefined;"
    >
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
      >
        <input
          class="MuiInputBase-input MuiInput-input"
          placeholder="Name"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      style="grid-column-end: span undefined;"
    >
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
      >
        <input
          class="MuiInputBase-input MuiInput-input"
          placeholder="Phone"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Admin/Register/Form/Field Grid Multi Span Items 1`] = `
<div
  style="border: 1px solid lightgrey; padding: 1rem; margin: 3rem auto; max-width: 600px;"
>
  <div
    class="makeStyles-root-5 makeStyles-root-6"
  >
    <div
      style="grid-column-end: span 2;"
    >
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
      >
        <input
          class="MuiInputBase-input MuiInput-input"
          placeholder="First Name"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      style="grid-column-end: span 2;"
    >
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
      >
        <input
          class="MuiInputBase-input MuiInput-input"
          placeholder="Last Name"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      style="grid-column-end: span 4;"
    >
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
      >
        <input
          class="MuiInputBase-input MuiInput-input"
          placeholder="Address"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      style="grid-column-end: span 2;"
    >
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
      >
        <input
          class="MuiInputBase-input MuiInput-input"
          placeholder="Suburb"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      style="grid-column-end: span 1;"
    >
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
      >
        <input
          class="MuiInputBase-input MuiInput-input"
          placeholder="State"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      style="grid-column-end: span 1;"
    >
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
      >
        <input
          class="MuiInputBase-input MuiInput-input"
          placeholder="Postcode"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
